--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "chromatin.nvim"]
 	path = chromatin.nvim
-	url = git@github.com:tek/chromatin.nvim
+	url = https://github.com/tek/chromatin.nvim
