--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 os: osx
 before_install:
-  - brew install python
+  - brew upgrade python
   - brew install neovim
 install:
   - pip install -r requirements.txt
