--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ before_install:
   - brew upgrade python
   - brew install neovim
 install:
-  - pip install -r requirements.txt
+  - pip3 install -r requirements.txt
+  - pip3 install --pre kallikrein
 script:
   - klk unit
   - klk integration
